--- a/extension/history_page/main.css
+++ b/extension/history_page/main.css
@@ -90,8 +90,8 @@ th span {
 }
 
 .moveBack, .moveForward {
-  width:  25px;
-  height: 25px;
+  width:  26px;
+  height: 26px;
   position: relative;
   top: -7px;
   font: 400 18px sans-serif;
@@ -107,7 +107,11 @@ th span {
   width: 12px;
   height: 3px;
   top: calc(50% - 1px);
-  left: calc(50% - 7px);
+  left: calc(50% - 6px);
+}
+
+.moveBack:hover::before, .moveBack:hover::after, .moveForward:hover::before, .moveForward:hover::after {
+  background-color: rgb(114, 123, 243);
 }
 
 .moveForward::before, .moveForward::after {
@@ -126,10 +130,13 @@ th span {
   transform: rotate(-40deg);
 }
 
-.jumpToPage {
+.lowerButtons {
   position: absolute;
   bottom: 7px;
   right: 20px;
+}
+
+.lowerButtons button {
   font-size: 17px;
 }
 
@@ -238,4 +245,28 @@ th span {
 
 .white {
   background-color: white;
+}
+
+button {
+  background: none;
+  font-size: 15;
+  line-height: 1.5;
+  color: black;
+  border: 2px solid black;
+}
+
+button:hover {
+  border-color: rgb(114, 123, 243);
+  background-color: transparent;
+  color: #2a39fa;
+}
+
+button.red:hover {
+  border-color: #dc0000;
+  color: #dc0000;
+}
+
+button.green:hover {
+  border-color: #3ca000;
+  color: #3ca000;
 }
