--- a/extension/options/options.css
+++ b/extension/options/options.css
@@ -1,5 +1,7 @@
 body {
   font-size: 14px;
+  font-family: sans-serif;
+  margin-top: 0;
 }
 
 table {
@@ -16,14 +18,6 @@ table, th, td {
   text-align: right;
 }
 
-button {
-  display: inline-block;
-  text-align: center;
-  font-size: 15px;
-  padding: 5px 10px;
-  width: 110px;
-}
-
 .defaults {
   margin-top: 10px;
   width: 80px;
@@ -31,4 +25,18 @@ button {
 
 br {
   margin-bottom: 5px;
+}
+
+button {
+  background: none;
+  font-size: 15;
+  line-height: 1.5;
+  color: black;
+  border: 2px solid black;
+}
+
+button:hover {
+  border-color: rgb(114, 123, 243);
+  background-color: transparent;
+  color: #2a39fa;
 }
