add recently visited pages list in popup

--- a/src/options/ui/components/options/markup.html
+++ b/src/options/ui/components/options/markup.html
@@ -16,6 +16,10 @@
               </select>
             </td>
           </tr>
+          <tr>
+            <td class="option-name">Recently visited pages</td>
+            <td><input type='number' x-b="visitedPagesLength" /></td>
+          </tr>
         </tbody>
       </table>
     </form>
